# web3-buildspace

./: .gitignore  README.md
eth-solidity-wave-portal/: package.json
eth-solidity-wave-portal/contracts/: WavePortal.sol
eth-solidity-wave-portal/scripts/: deploy.js  run.js
project-1-eth-solidity-wave-portal-contract/: .gitignore
project-1-eth-solidity-wave-portal-contract/contracts/: WavePortal.sol
project-1-eth-solidity-wave-portal/project-1-eth-solidity-contract/scripts/: run.js
project-2-solana-rust-gif-portal/project-2-solana-rust-contract/: Anchor.toml
project-2-solana-rust-gif-portal/project-2-solana-rust-contract/programs/project-2-solana-gif-portal-starter-contract/: Cargo.toml
project-2-solana-rust-gif-portal/project-2-solana-rust-contract/programs/project-2-solana-gif-portal-starter-contract/src/: lib.rs
project-2-solana-rust-gif-portal/project-2-solana-rust-contract/tests/: project-2-solana-gif-portal-starter-contract.js
